turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:8: error: value Red is not a member of object java.awt.Color
	setCouleur(Color.Red)
                         ^Source:13: error: value Yellow is not a member of object java.awt.Color
	setCouleur(Color.Yellow)
                         ^Source:18: error: value Magenta is not a member of object java.awt.Color
	setCouleur(Color.Magenta)
                         ^